# audio-transcription-service

./: Dockerfile  pyproject.toml
src/: main.py  my_service.py
