[project]
name = "audio-transcription-service"
version = "1.0.0"

requires-python = ">=3.10"
dependencies = [
    "common-code[test] @ git+https://github.com/swiss-ai-center/common-code.git@main",
    "pydub~=0.25.1",
    "torch==2.4.1",
    "transformers~=4.45.2"

]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov-config=.coveragerc --cov-report xml --cov-report term-missing --cov=./src"
